#51776 fixed header on mobile

--- a/html/src/components/VHeader/VHeader.critical.css
+++ b/html/src/components/VHeader/VHeader.critical.css
@@ -89,7 +89,7 @@
     }
 
     &--search &__mobile {
-        background: var(--cl-white);
+        background-color: var(--cl-white);
         border-bottom: 1px solid var(--cl-divider-grey);
 
         &-container {
